--- a/dabout.html
+++ b/dabout.html
@@ -187,7 +187,7 @@
 
 <section class="about-section">
   <div class="about-left">
-    <img src="profile1.jpeg" alt="Ali raza image">
+    <img src="profilePic.jpg" alt="Ali raza image">
     <div class="badge">40+<br>Projects</div>
     <div class="badge">1+<br>Year</div>
     <div class="badge">30+<br>Clients</div>
