--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ overall success of the organization & provide opportunities for career growth.</
                 
                 <!-- Profile Image -->
                 <div class="profile-circle">
-                    <img src="profilePic.jpeg" alt="Ali raza image" class="profile-image">
+                    <img src="profilePic.jpg" alt="Ali raza image" class="profile-image">
                 </div>
             </div>
         </main>
