--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ overall success of the organization & provide opportunities for career growth.</
                     </div>
                 </div>
                 <div class="buttons fade-in delay-4">
-                    <a href="./img/CV.pdf" class="btn btn-primary">Download CV</a>
+                    <a href="AliRazaCV.pdf" class="btn btn-primary">Download CV</a>
                     <a href="#" class="btn btn-outline">Hire Me Now!</a>
                 </div>
                 <div class="social-icons fade-in delay-5">
