--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ overall success of the organization & provide opportunities for career growth.</
                     <a href="#" class="btn btn-outline">Hire Me Now!</a>
                 </div>
                 <div class="social-icons fade-in delay-5">
-                    <a href="#" class="social-icon">
+                    <a href="https://www.facebook.com/profile.php?id=100011272085685" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <a href="#" class="social-icon">
